Closed
Bug 242861
Opened 21 years ago
Closed 18 years ago
UnderBar accent doesn't work in MathML
Categories
(Core :: MathML, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9
People
(Reporter: steve.swanson, Assigned: karlt)
References
Details
Attachments
(2 files, 1 obsolete file)
|
817 bytes,
text/xml
|
Details | |
|
1.85 KB,
patch
|
roc
:
review+
roc
:
superreview+
beltzner
:
approval1.9+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.1; .NET CLR 1.1.4322)
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8a) Gecko/20040506
I don't see anything. If you use the caret, you see Mozilla thinks something
is there, but it seems to have zero width.
Reproducible: Always
Steps to Reproduce:
1. Load testcase
Actual Results:
You see an OverBar and UnderBrace accent, but not an UnderBar.
Expected Results:
Drawn a bar.
| Reporter | ||
Comment 1•21 years ago
|
||
Comment 2•20 years ago
|
||
This bug seems to be fixed with the current CVS version (11/11/05). I see all overbars and underbars and the brace.
| Reporter | ||
Comment 3•20 years ago
|
||
Still fails for me. What's your OS? If Windows, which fonts do you have installed?
| Assignee | ||
Comment 4•18 years ago
|
||
I can reproduce this with larger font sizes on Linux with Standard Symbols L.
OS: Windows XP → All
| Assignee | ||
Comment 5•18 years ago
|
||
The problem is that dy is not set correctly when bm.ascent is -ve for
UnderBar:
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/layout/mathml/base/src/nsMathMLChar.cpp&rev=1.139&mark=2382,2402#2382
and so the UnderBar is drawn outside the clip rect.
| Assignee | ||
Updated•18 years ago
|
QA Contact: ian → mathml
| Assignee | ||
Comment 6•18 years ago
|
||
(The baseline has already been calculated in TryParts.)
Attachment #315444 -
Flags: review?(roc)
| Assignee | ||
Updated•18 years ago
|
Attachment #315429 -
Attachment is obsolete: true
Attachment #315429 -
Flags: review?(roc)
Attachment #315444 -
Flags: superreview+
Attachment #315444 -
Flags: review?(roc)
Attachment #315444 -
Flags: review+
| Assignee | ||
Comment 7•18 years ago
|
||
Comment on attachment 315444 [details] [diff] [review]
simpler fix
Requesting approval1.9. Although this is an old bug, changes (probably in the fonts used) seem to have made this more common, so it would seem like a regression.
The patch is small so the risk is low, but I have tested manually at http://www.maths-informatique-jeux.com/international/mathml_test/accents.xml
I have a reftest that can be landed with this.
Attachment #315444 -
Flags: approval1.9?
Comment 8•18 years ago
|
||
Comment on attachment 315444 [details] [diff] [review]
simpler fix
a=beltzner assuming reftest lands with it
Attachment #315444 -
Flags: approval1.9? → approval1.9+
| Assignee | ||
Comment 9•18 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
| Assignee | ||
Updated•18 years ago
|
Target Milestone: --- → mozilla1.9
You need to log in
before you can comment on or make changes to this bug.
Description
•