PaintHorizontally: correct dy calculation when bm.ascent is -ve. b=242861 r+sr=roc a1.9=beltzner